[metadata]
name = swarm
version = 0.1.0
author = Tom Wawer fork of OpenAI Solutions
description = A lightweight, stateless multi-agent orchestration framework with RabbitMQ support.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    openai>=1.33.0
    pytest
    requests
    tqdm
    pre-commit
    instructor
    pika>=1.3.1
    python-dotenv>=1.0.0
    typing-extensions>=4.7.1
python_requires = >=3.10

[options.packages.find]
include = swarm*

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3
